FORUM-47 | Fix z-index's masklayer of FORUM.

--- a/forumResources/src/main/webapp/skin/Stylesheet.css
+++ b/forumResources/src/main/webapp/skin/Stylesheet.css
@@ -71,7 +71,7 @@
 
 .ParentMaskLayer {
     position: relative;
-    z-index: 105;
+    z-index: 3;
 }
 
 .ParentMaskLayer .KSMaskLayer {
